--- a/report/main.tex
+++ b/report/main.tex
@@ -7,7 +7,6 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{graphicx}
-\usepackage[numbers, sort&compress]{natbib} % For improved citations
 \usepackage{hyperref}
 \usepackage{booktabs}
 \usepackage{float}
@@ -44,7 +43,7 @@
 Acknowledge any funding, technical support, or other contributions.
 
 % --- BIBLIOGRAPHY ---
-\bibliographystyle{plainnat}
+\bibliographystyle{plain}
 \bibliography{references}
 
 \end{document} 
