--- a/report/references.bib
+++ b/report/references.bib
@@ -1,22 +1,8 @@
-
-@misc{noauthor_gemini_2025,
-	title = {Gemini 2.5: {Our} most intelligent {AI} model},
-	shorttitle = {Gemini 2.5},
-	url = {https://blog.google/technology/google-deepmind/gemini-model-thinking-updates-march-2025/},
-	abstract = {Gemini 2.5 is our most intelligent AI model, now with thinking.},
-	language = {en-us},
-	urldate = {2025-05-29},
-	journal = {Google},
-	month = mar,
-	year = {2025},
-	file = {Snapshot:C\:\\Users\\jackn\\Zotero\\storage\\DYSD6DF6\\gemini-model-thinking-updates-march-2025.html:text/html},
-}
-
 @misc{skarlinski_language_2024,
 	title = {Language agents achieve superhuman synthesis of scientific knowledge},
 	url = {http://arxiv.org/abs/2409.13740},
 	doi = {10.48550/arXiv.2409.13740},
-	abstract = {Language models are known to “hallucinate” incorrect information, and it is unclear if they are sufficiently accurate and reliable for use in scientific research. We developed a rigorous human-AI comparison methodology to evaluate language model agents on real-world literature search tasks covering information retrieval, summarization, and contradiction detection tasks. We show that PaperQA2, a frontier language model agent optimized for improved factuality, matches or exceeds subject matter expert performance on three realistic literature research tasks without any restrictions on humans (i.e., full access to internet, search tools, and time). PaperQA2 writes cited, Wikipediastyle summaries of scientific topics that are significantly more accurate than existing, human-written Wikipedia articles. We also introduce a hard benchmark for scientific literature research called LitQA2 that guided design of PaperQA2, leading to it exceeding human performance. Finally, we apply PaperQA2 to identify contradictions within the scientific literature, an important scientific task that is challenging for humans. PaperQA2 identifies 2.34 ± 1.99 (mean ± SD, N = 93 papers) contradictions per paper in a random subset of biology papers, of which 70\% are validated by human experts. These results demonstrate that language model agents are now capable of exceeding domain experts across meaningful tasks on scientific literature.},
+	abstract = {Language models are known to "hallucinate" incorrect information, and it is unclear if they are sufficiently accurate and reliable for use in scientific research. We developed a rigorous human-AI comparison methodology to evaluate language model agents on real-world literature search tasks covering information retrieval, summarization, and contradiction detection tasks. We show that PaperQA2, a frontier language model agent optimized for improved factuality, matches or exceeds subject matter expert performance on three realistic literature research tasks without any restrictions on humans (i.e., full access to internet, search tools, and time). PaperQA2 writes cited, Wikipediastyle summaries of scientific topics that are significantly more accurate than existing, human-written Wikipedia articles. We also introduce a hard benchmark for scientific literature research called LitQA2 that guided design of PaperQA2, leading to it exceeding human performance. Finally, we apply PaperQA2 to identify contradictions within the scientific literature, an important scientific task that is challenging for humans. PaperQA2 identifies 2.34 ± 1.99 (mean ± SD, N = 93 papers) contradictions per paper in a random subset of biology papers, of which 70\% are validated by human experts. These results demonstrate that language model agents are now capable of exceeding domain experts across meaningful tasks on scientific literature.},
 	language = {en},
 	urldate = {2025-05-29},
 	publisher = {arXiv},
@@ -118,7 +104,7 @@
 	shorttitle = {{MathBench}},
 	url = {http://arxiv.org/abs/2405.12209},
 	doi = {10.48550/arXiv.2405.12209},
-	abstract = {Recent advancements in large language models (LLMs) have showcased significant improvements in mathematics. However, traditional math benchmarks like GSM8k offer a unidimensional perspective, falling short in providing a holistic assessment of the LLMs’ math capabilities. To address this gap, we introduce MathBench, a new benchmark that rigorously assesses the mathematical capabilities of large language models. MathBench spans a wide range of mathematical disciplines, offering a detailed evaluation of both theoretical understanding and practical problem-solving skills. The benchmark progresses through five distinct stages, from basic arithmetic to college mathematics, and is structured to evaluate models at various depths of knowledge. Each stage includes theoretical questions and application problems, allowing us to measure a model’s mathematical proficiency and its ability to apply concepts in practical scenarios. MathBench aims to enhance the evaluation of LLMs’ mathematical abilities, providing a nuanced view of their knowledge understanding levels and problem solving skills in a bilingual context. The project is released at https://github. com/open-compass/MathBench.},
+	abstract = {Recent advancements in large language models (LLMs) have showcased significant improvements in mathematics. However, traditional math benchmarks like GSM8k offer a unidimensional perspective, falling short in providing a holistic assessment of the LLMs' math capabilities. To address this gap, we introduce MathBench, a new benchmark that rigorously assesses the mathematical capabilities of large language models. MathBench spans a wide range of mathematical disciplines, offering a detailed evaluation of both theoretical understanding and practical problem-solving skills. The benchmark progresses through five distinct stages, from basic arithmetic to college mathematics, and is structured to evaluate models at various depths of knowledge. Each stage includes theoretical questions and application problems, allowing us to measure a model's mathematical proficiency and its ability to apply concepts in practical scenarios. MathBench aims to enhance the evaluation of LLMs' mathematical abilities, providing a nuanced view of their knowledge understanding levels and problem solving skills in a bilingual context. The project is released at https://github. com/open-compass/MathBench.},
 	language = {en},
 	urldate = {2025-05-30},
 	publisher = {arXiv},
@@ -207,28 +193,12 @@
 	file = {PDF:C\:\\Users\\jackn\\Zotero\\storage\\7ZWZZQ3I\\Wang and Duan - 2024 - Agent AI with LangGraph A Modular Framework for Enhancing Machine Translation Using Large Language.pdf:application/pdf},
 }
 
-@misc{noauthor_pricing_nodate,
-	title = {Pricing},
-	url = {https://openai.com/api/pricing/},
-	abstract = {Simple and flexible. Only pay for what you use.},
-	language = {en-US},
-	urldate = {2025-06-26},
-	file = {Snapshot:C\:\\Users\\jackn\\Zotero\\storage\\IC99B895\\pricing.html:text/html},
-}
-
-@misc{noauthor_inspect_evalssrcinspect_evalslab_bench_nodate,
-	title = {inspect\_evals/src/inspect\_evals/lab\_bench at main · {UKGovernmentBEIS}/inspect\_evals},
-	url = {https://github.com/UKGovernmentBEIS/inspect_evals/tree/main/src/inspect_evals/lab_bench},
-	urldate = {2025-06-26},
-	file = {inspect_evals/src/inspect_evals/lab_bench at main · UKGovernmentBEIS/inspect_evals:C\:\\Users\\jackn\\Zotero\\storage\\TQNHNGK8\\lab_bench.html:text/html},
-}
-
 @misc{laurent_lab-bench_2024,
 	title = {{LAB}-{Bench}: {Measuring} {Capabilities} of {Language} {Models} for {Biology} {Research}},
 	shorttitle = {{LAB}-{Bench}},
 	url = {http://arxiv.org/abs/2407.10362},
 	doi = {10.48550/arXiv.2407.10362},
-	abstract = {There is widespread optimism that frontier Large Language Models (LLMs) and LLM-augmented systems have the potential to rapidly accelerate scientific discovery across disciplines. Today, many benchmarks exist to measure LLM knowledge and reasoning on “textbook”-style science questions, but few if any benchmarks are designed to evaluate language model performance on practical tasks required for scientific research, such as literature search, protocol planning, and data analysis. As a step toward building such benchmarks, we introduce the Language Agent Biology Benchmark (LAB-Bench), a broad dataset of over 2,400 multiple choice questions for evaluating AI systems on a range of practical biology research capabilities, including recall and reasoning over literature, interpretation of figures, access and navigation of databases, and comprehension and manipulation of DNA and protein sequences. Importantly, in contrast to previous scientific benchmarks, we expect that an AI system that can achieve consistently high scores on the more difficult LAB-Bench tasks would serve as a useful assistant for researchers in areas such as literature search and molecular cloning. As an initial assessment of the emergent scientific task capabilities of frontier language models, we measure performance of several against our benchmark and report results compared to human expert biology researchers. We will continue to update and expand LAB-Bench over time, and expect it to serve as a useful tool in the development of automated research systems going forward. A public subset of LAB-Bench is available for use at the following url: https://huggingface.co/datasets/futurehouse/lab-bench.},
+	abstract = {There is widespread optimism that frontier Large Language Models (LLMs) and LLM-augmented systems have the potential to rapidly accelerate scientific discovery across disciplines. Today, many benchmarks exist to measure LLM knowledge and reasoning on "textbook"-style science questions, but few if any benchmarks are designed to evaluate language model performance on practical tasks required for scientific research, such as literature search, protocol planning, and data analysis. As a step toward building such benchmarks, we introduce the Language Agent Biology Benchmark (LAB-Bench), a broad dataset of over 2,400 multiple choice questions for evaluating AI systems on a range of practical biology research capabilities, including recall and reasoning over literature, interpretation of figures, access and navigation of databases, and comprehension and manipulation of DNA and protein sequences. Importantly, in contrast to previous scientific benchmarks, we expect that an AI system that can achieve consistently high scores on the more difficult LAB-Bench tasks would serve as a useful assistant for researchers in areas such as literature search and molecular cloning. As an initial assessment of the emergent scientific task capabilities of frontier language models, we measure performance of several against our benchmark and report results compared to human expert biology researchers. We will continue to update and expand LAB-Bench over time, and expect it to serve as a useful tool in the development of automated research systems going forward. A public subset of LAB-Bench is available for use at the following url: https://huggingface.co/datasets/futurehouse/lab-bench.},
 	language = {en},
 	urldate = {2025-06-26},
 	publisher = {arXiv},
@@ -248,7 +218,7 @@
 	language = {en},
 	urldate = {2025-06-26},
 	journal = {Twitter},
-	author = {{swyx [@swyx]}},
+	author = {swyx},
 	month = jun,
 	year = {2023},
 	file = {Snapshot:C\:\\Users\\jackn\\Zotero\\storage\\4VWZTGWR\\1671272883379908608.html:text/html},
@@ -261,14 +231,14 @@
 	language = {en},
 	urldate = {2025-06-26},
 	journal = {Twitter},
-	author = {{Soumith Chintala [@soumithchintala]}},
+	author = {Chintala, Soumith},
 	month = jun,
-	year = {2023},
+	year = {2023}
 }
 
 @misc{gwern_gpt-4_2023,
 	type = {Reddit {Post}},
-	title = {{GPT}-4 rumors: a {Mixture}-of-{Experts} w/8 {GPT}-3-220bs?},
+	title = {{GPT}-4 rumors: a {Mixture}-{Experts} w/8 {GPT}-3-220bs?},
 	shorttitle = {{GPT}-4 rumors},
 	url = {https://www.reddit.com/r/mlscaling/comments/14eowmw/gpt4_rumors_a_mixtureofexperts_w8_gpt3220bs/},
 	urldate = {2025-06-26},
@@ -282,10 +252,11 @@
 @misc{noauthor_non-determinism_2023,
 	title = {Non-determinism in {GPT}-4 is caused by {Sparse} {MoE}},
 	url = {https://152334H.github.io/blog/non-determinism-in-gpt-4/},
-	abstract = {It’s well-known at this point that GPT-4/GPT-3.5-turbo is non-deterministic, even at temperature=0.0. This is an odd behavior if you’re used to dense decoder-only models, where temp=0 should imply greedy sampling which should imply full determinism, because the logits for the next token should be a pure function of the input sequence \& the model weights.},
+	abstract = {It's well-known at this point that GPT-4/GPT-3.5-turbo is non-deterministic, even at temperature=0.0. This is an odd behavior if you're used to dense decoder-only models, where temp=0 should imply greedy sampling which should imply full determinism, because the logits for the next token should be a pure function of the input sequence \& the model weights.},
 	language = {en},
 	urldate = {2025-06-26},
 	journal = {152334H},
+	author = {{152334H}},
 	month = aug,
 	year = {2023},
 	note = {Section: posts},
@@ -299,7 +270,8 @@
 	abstract = {In a recent interview, George Hotz [claimed](https://twitter.com/pommedeterre33/status/1671263789914677248) that GPT-4 is just an eight-way mixture model of 220},
 	language = {en},
 	urldate = {2025-06-26},
-	file = {Snapshot:C\:\\Users\\jackn\\Zotero\\storage\\ETGFRCG5\\mixture-of-experts-is-gpt-4-just-eight-smaller-models.html:text/html},
+	author = {Rickard, Matt},
+	file = {Snapshot:C\:\\Users\\jackn\\Zotero\\storage\\ETGFRCG5\\mixture-of-experts-is-gpt-4-just-eight-smaller-models.html:text/html}
 }
 
 @misc{beconvincible_does_2023,
@@ -319,7 +291,7 @@
 	title = {Peering {Inside} {GPT}-4: {Understanding} {Its} {Mixture} of {Experts} ({MoE}) {Architecture}},
 	shorttitle = {Peering {Inside} {GPT}-4},
 	url = {https://medium.com/@seanbetts/peering-inside-gpt-4-understanding-its-mixture-of-experts-moe-architecture-2a42eb8bdcb3},
-	abstract = {Artificial Intelligence (AI) is rapidly evolving, breaking new ground, and bringing us closer than ever to Artifical General Intelligence…},
+	abstract = {Artificial Intelligence (AI) is rapidly evolving, breaking new ground, and bringing us closer than ever to Artifical General Intelligence...},
 	language = {en},
 	urldate = {2025-06-26},
 	journal = {Medium},
@@ -327,15 +299,6 @@
 	month = jul,
 	year = {2023},
 	file = {Snapshot:C\:\\Users\\jackn\\Zotero\\storage\\4EGLKDM9\\peering-inside-gpt-4-understanding-its-mixture-of-experts-moe-architecture-2a42eb8bdcb3.html:text/html},
-}
-
-@misc{noauthor_gpt-4o_nodate,
-	title = {{GPT}-4o mini: advancing cost-efficient intelligence},
-	shorttitle = {{GPT}-4o mini},
-	url = {https://openai.com/index/gpt-4o-mini-advancing-cost-efficient-intelligence/},
-	abstract = {Introducing the most cost-efficient small model in the market},
-	language = {en-US},
-	urldate = {2025-06-26},
 }
 
 @misc{xu_hallucination_2025,
@@ -353,20 +316,6 @@
 	note = {arXiv:2401.11817 [cs]},
 	keywords = {Computer Science - Artificial Intelligence, Computer Science - Computation and Language, Computer Science - Machine Learning},
 	file = {PDF:C\:\\Users\\jackn\\Zotero\\storage\\9EVLJ3M9\\Xu et al. - 2025 - Hallucination is Inevitable An Innate Limitation of Large Language Models.pdf:application/pdf},
-}
-
-@article{knight_openai_nodate,
-	title = {{OpenAI} {Upgrades} {Its} {Smartest} {AI} {Model} {With} {Improved} {Reasoning} {Skills}},
-	issn = {1059-1028},
-	url = {https://www.wired.com/story/openai-o3-reasoning-model-google-gemini/},
-	abstract = {A day after Google announced its first model capable of reasoning over problems, OpenAI has upped the stakes with an improved version of its own.},
-	language = {en-US},
-	urldate = {2025-06-26},
-	journal = {Wired},
-	author = {Knight, Will},
-	note = {Section: tags},
-	keywords = {artificial intelligence, chatbots, chatgpt, google, openai},
-	file = {Snapshot:C\:\\Users\\jackn\\Zotero\\storage\\MUDIXL7Y\\openai-o3-reasoning-model-google-gemini.html:text/html},
 }
 
 @misc{han_llm_2025,
