--- a/report/discussion.tex
+++ b/report/discussion.tex
@@ -40,7 +40,7 @@ A notable anomaly was the performance of \texttt{gpt-4.1}. Despite being a newer
 \subsubsection{Hyperparameter Effects}
 The experimental results confirmed that system performance is most sensitive to hyperparameters controlling the retrieval process. \\
 
-Increasing the answer cutoff (\texttt{max\_sources}) from 5 to 15 led to a decrease in both accuracy and precision. This contradicts the naive assumption that more context is always better. This phenomenon is likely an example of the "lost in the middle" problem CITE, where LLMs with large context windows struggle to attend to information buried in the middle of a long prompt. By expanding the number of sources, we increase the risk that the correct evidence, even if retrieved, is ignored by the model during the final synthesis step, leading it to answer incorrectly or hallucinate. \\
+Increasing the answer cutoff (\texttt{max\_sources}) from 5 to 15 led to a decrease in both accuracy and precision. This contradicts the naive assumption that more context is always better. This phenomenon is likely an example of the "lost in the middle" problem \cite{liu_lost_2023}, where LLMs with large context windows struggle to attend to information buried in the middle of a long prompt. By expanding the number of sources, we increase the risk that the correct evidence, even if retrieved, is ignored by the model during the final synthesis step, leading it to answer incorrectly or hallucinate. \\
 
 In the original paper, decreasing the top-k parameter led to a drastic reduction in accuracy. While our results reflected the same trend, the effect was far less pronounced. We found no clear correlation between the top-k value and accuracy, with newer models like \texttt{gpt-4o-mini} achieving near-superhuman performance even with a low top-k. This suggests that newer models are more effective in their initial retrieval step, identifying higher-quality, more relevant chunks from the outset. Consequently, the need for a large candidate pool for the subsequent RCS step is diminished. \\
 
@@ -48,7 +48,7 @@ This observation is further supported by the results from disabling the RCS step
 
 \subsubsection{Issues}
 One very important issue noticed was the flucatuation in performance depending on LLM usage.
-Noticed quite late on in the project, after performing a sizable number of runs, it appeared that the performance of LLMs would change depending on when the tests would run even with temperature 0. Looking on forums \cite{beconvincible_does_2023}, it appeared that this was a common problem, especially with OpenAI. Looking into the GPT-4 architecture could return a reason why this is happening. There is no GPT-4 techical paper that details its full archtitecture due to competition, but forums \cite{noauthor_mixture_nodate} \cite{gwern_gpt-4_2023}, leaks  and expert analysis \cite{soumith_chintala_soumithchintala_i_2023} \cite{swyx_swyx_latentspacepod_2023} \cite{betts_peering_2023} point to the fact that GPt-4 is a Mixture of Experts architecture. It is essentially an ensemble model of transformers and neural networks, each specialised for a 'expert' topic, rather than a general transformer, and the query is sent to a number of 'experts' to answer the question. The inference is then distributed to a number of computers and recollected for minimum computational load and maximum speed. However, it is this distributed factor that may cause the performance degradation at peak times. One reason is that even though we set temperature to 0, since the inference is distributed, it is not guaranteed that the same configuration is sent to each device (possibly due to compression etc.), and so floating point errors could accumulate and potentially lead to different outputs \cite{noauthor_non-determinism_2023}. Looking at MOE, it could be possible that at peak times, when resources are contested heavily, models could be degraded to ensure everyone has access to the models (e.g. instead of 3 experts you are only allocated 2, also known as graceful degradation). Also, to balance the load, the experts could be given less time for the current user's prompt, so that it is freed for the next user's prompt, resulting in less time for processing. These are all potential ideas why this is happening and is not confirmed by providers such as OpenAI. This points to possibly using less popular providers for better performance. \\
+Noticed quite late on in the project, after performing a sizable number of runs, it appeared that the performance of LLMs would change depending on when the tests would run even with temperature 0. Looking on forums \cite{beconvincible_does_2023}, it appeared that this was a common problem, especially with OpenAI. Looking into the GPT-4 architecture could return a reason why this is happening. There is no GPT-4 techical paper that details its full archtitecture due to competition, but forums \cite{gwern_gpt-4_2023} , leaks  and expert analysis \cite{swyx_swyx_latentspacepod_2023} \cite{soumith_chintala_soumithchintala_i_2023} \cite{betts_peering_2023} point to the fact that GPt-4 is a Mixture of Experts architecture. It is essentially an ensemble model of transformers and neural networks, each specialised for a 'expert' topic, rather than a general transformer, and the query is sent to a number of 'experts' to answer the question. The inference is then distributed to a number of computers and recollected for minimum computational load and maximum speed. However, it is this distributed factor that may cause the performance degradation at peak times. One reason is that even though we set temperature to 0, since the inference is distributed, it is not guaranteed that the same configuration is sent to each device (possibly due to compression etc.), and so floating point errors could accumulate and potentially lead to different outputs \cite{noauthor_non-determinism_2023}. Looking at MOE, it could be possible that at peak times, when resources are contested heavily, models could be degraded to ensure everyone has access to the models (e.g. instead of 3 experts you are only allocated 2, also known as graceful degradation). Also, to balance the load, the experts could be given less time for the current user's prompt, so that it is freed for the next user's prompt, resulting in less time for processing. These are all potential ideas why this is happening and is not confirmed by providers such as OpenAI. This points to possibly using less popular providers for better performance. \\
 
 There seemed to also be a disparity between the effect of hardware on the performance of the runs. Due to technical issues, some of the runs had to be run on two different laptops. One laptop had below average hardware specifications (no GPU, Intel 12th Gen 5 Series CPU), and the other had top of the line specifications (e.g. top-end AMD GPU and CPU). Despite running the exact same code, and the same version for the packages, there was a slight difference in performance. Predictably, the better laptop completed the evaluation of the test set quicker, but the difference in time was substantial (usually 35 minutes, instead of 50 minutes). Considering the code is primarily API calls, this was peculiar, as there was no difference in code or packages, and there seemed to be no part of the code that relied heavily on CPU or GPU performance. \\
 
