--- a/report/methods.tex
+++ b/report/methods.tex
@@ -63,7 +63,7 @@ The requirement for a standardized input format was driven by the specific needs
 
 Inspect AI is a framework developed by the UK's AI Security Institute for evaluating the performance of LLMs. Its \texttt{eval} tool facilitates rapid performance evaluation by running LLM calls asynchronously. An \texttt{eval} task consists of three components: a dataset, a solver, and a scorer. The dataset is composed of \texttt{Sample} objects, each corresponding to an individual task (in this case, a multiple-choice question) and containing fields for the input, choices, and target answer. The solver represents the LLM system being evaluated, and the scorer defines the evaluation metric. A key benefit of Inspect AI is its provision of an intuitive interface for monitoring evaluation progress.\\
 
-A separate custom library, \texttt{inspect\_evals} \cite{noauthor_inspect_evalssrcinspect_evalslab_bench_nodate}, exists for evaluating the performance of various LLMs on benchmarks such as LitQA \cite{laurent_lab-bench_2024}. However, it is only compatible with single LLMs, not multi-agent systems. \\
+A separate custom library, \texttt{inspect\_evals}, exists for evaluating the performance of various LLMs on benchmarks such as LitQA \cite{laurent_lab-bench_2024}. However, it is only compatible with single LLMs, not multi-agent systems. \\
 
 The \texttt{inspect\_ai} framework does offer support for multi-agent systems via its \texttt{bridge} function. However, the package is still in early development and, in its native form, does not support end-to-end evaluation of multi-agent systems on multiple-choice questions. The \texttt{bridge} function effectively allows a multi-agent system to act as the solver, but its communication format only supports the passing of agent messages, not structured data like the question, choices, or target answer. 
 This limitation prevents the scorer from accessing the necessary information to determine if an answer is correct. \\
@@ -88,7 +88,7 @@ reorganized in the K562 cell line?
 
 \subsection{Hyperparameters}
 
-The main hyperparameter varied in this project was the LLM itself. In the original paper, GPT-4-Turbo was the default model. However, given the rapid pace of model development, several newer models were tested to assess performance improvements. The models evaluated were OpenAI's \texttt{gpt-4o-mini}, \texttt{gpt-4.1}, and \texttt{gpt-4-turbo}. Due to budget constraints, the default model used in our experiments was \texttt{gpt-4o-mini}, which offers performance comparable to or better than \texttt{gpt-4-turbo} for a lower per-token cost \cite{noauthor_pricing_nodate}. \\
+The main hyperparameter varied in this project was the LLM itself. In the original paper, GPT-4-Turbo was the default model. However, given the rapid pace of model development, several newer models were tested to assess performance improvements. The models evaluated were OpenAI's GPT-4o-Mini, GPT-4.1, and GPT-4-Turbo. Due to budget constraints, the default model used in our experiments was GPT-4o-Mini, which offers performance comparable to or better than GPT-4-Turbo for a lower per-token cost.\\
 
 Another hyperparameter that was changed was the text embedding model. The default model used by PaperQA is OpenAI's \texttt{text-embedding-3-small}, which was no longer state-of-the-art at the time of the experiments. Instead, the highest-performing model available via LiteLLM, Google's \texttt{text-embedding-004}, was used. Embeddings are crucial for NLP tasks, as a more accurate semantic representation of text is hypothesized to improve an LLM's comprehension and subsequent decision-making. \\
 
