--- a/report/main.tex
+++ b/report/main.tex
@@ -12,11 +12,10 @@
 \usepackage{float}
 \usepackage{siunitx}
 \usepackage{cleveref}
-\usepackage{times} % Use Times New Roman font
-\usepackage{authblk} % For author affiliations
-\usepackage{abstract} % For abstract formatting
-\usepackage{flushend} % To balance columns on the last page
-\usepackage{parskip} % To remove paragraph indentation
+\usepackage{times} 
+\usepackage{authblk}
+\usepackage{flushend} 
+\usepackage{parskip} 
 
 % --- LAYOUT ---
 \usepackage[margin=2cm, columnsep=0.8cm]{geometry}
@@ -33,14 +32,15 @@
 
 \maketitle
 
+\centering{
+    Word count: 6,442
+}
+
 \input{introduction}
 \input{methods}
 \input{results}
 \input{discussion}
 \input{conclusion}
-
-\section*{Acknowledgments}
-Acknowledge any funding, technical support, or other contributions.
 
 % --- BIBLIOGRAPHY ---
 \bibliographystyle{plain}
